src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COLON

Grammar

Rule 0     S' -> programa
Rule 1     programa -> bloco_principal lista_subprogramas
Rule 2     programa -> bloco_principal
Rule 3     bloco_principal -> cabecalho declaracoes instrucoes END
Rule 4     bloco_principal -> cabecalho instrucoes END
Rule 5     lista_subprogramas -> lista_subprogramas subprograma
Rule 6     lista_subprogramas -> subprograma
Rule 7     subprograma -> INTEGER FUNCTION IDEN LPAREN lista_ids_simples RPAREN declaracoes instrucoes END
Rule 8     subprograma -> REAL FUNCTION IDEN LPAREN lista_ids_simples RPAREN declaracoes instrucoes END
Rule 9     subprograma -> SUBROUTINE IDEN LPAREN lista_ids_simples RPAREN declaracoes instrucoes END
Rule 10    cabecalho -> PROGRAM IDEN
Rule 11    declaracoes -> declaracoes declaracao
Rule 12    declaracoes -> declaracao
Rule 13    declaracao -> INTEGER lista_ids
Rule 14    declaracao -> REAL lista_ids
Rule 15    declaracao -> LOGICAL lista_ids
Rule 16    lista_ids -> lista_ids COMMA id_ou_array
Rule 17    lista_ids -> id_ou_array
Rule 18    id_ou_array -> IDEN
Rule 19    id_ou_array -> IDEN LPAREN INT RPAREN
Rule 20    lista_ids_simples -> lista_ids_simples COMMA IDEN
Rule 21    lista_ids_simples -> IDEN
Rule 22    instrucoes -> instrucoes instrucao_com_label
Rule 23    instrucoes -> instrucao_com_label
Rule 24    instrucao_com_label -> INT instrucao
Rule 25    instrucao_com_label -> instrucao
Rule 26    instrucao -> IDEN ASSIGN expr
Rule 27    instrucao -> IDEN LPAREN expr RPAREN ASSIGN expr
Rule 28    instrucao -> PRINT MUL COMMA lista_print
Rule 29    lista_print -> lista_print COMMA elemento_print
Rule 30    lista_print -> elemento_print
Rule 31    elemento_print -> STRING
Rule 32    elemento_print -> expr
Rule 33    instrucao -> READ MUL COMMA IDEN
Rule 34    instrucao -> READ MUL COMMA IDEN LPAREN expr RPAREN
Rule 35    instrucao -> DO INT IDEN ASSIGN expr COMMA expr
Rule 36    instrucao -> CONTINUE
Rule 37    instrucao -> IF LPAREN expr RPAREN THEN instrucoes ENDIF
Rule 38    instrucao -> IF LPAREN expr RPAREN THEN instrucoes ELSE instrucoes ENDIF
Rule 39    instrucao -> GOTO INT
Rule 40    instrucao -> RETURN
Rule 41    expr -> expr ADD expr
Rule 42    expr -> expr SUB expr
Rule 43    expr -> expr MUL expr
Rule 44    expr -> expr DIV expr
Rule 45    expr -> expr EQ expr
Rule 46    expr -> expr NE expr
Rule 47    expr -> expr LT expr
Rule 48    expr -> expr LE expr
Rule 49    expr -> expr GT expr
Rule 50    expr -> expr GE expr
Rule 51    expr -> expr AND expr
Rule 52    expr -> expr OR expr
Rule 53    expr -> NOT expr
Rule 54    expr -> LPAREN expr RPAREN
Rule 55    expr -> INT
Rule 56    expr -> REAL_NUM
Rule 57    expr -> IDEN
Rule 58    expr -> TRUE
Rule 59    expr -> FALSE
Rule 60    expr -> IDEN LPAREN lista_expr RPAREN
Rule 61    lista_expr -> lista_expr COMMA expr
Rule 62    lista_expr -> expr

Terminals, with rules where they appear

ADD                  : 41
AND                  : 51
ASSIGN               : 26 27 35
COLON                : 
COMMA                : 16 20 28 29 33 34 35 61
CONTINUE             : 36
DIV                  : 44
DO                   : 35
ELSE                 : 38
END                  : 3 4 7 8 9
ENDIF                : 37 38
EQ                   : 45
FALSE                : 59
FUNCTION             : 7 8
GE                   : 50
GOTO                 : 39
GT                   : 49
IDEN                 : 7 8 9 10 18 19 20 21 26 27 33 34 35 57 60
IF                   : 37 38
INT                  : 19 24 35 39 55
INTEGER              : 7 13
LE                   : 48
LOGICAL              : 15
LPAREN               : 7 8 9 19 27 34 37 38 54 60
LT                   : 47
MUL                  : 28 33 34 43
NE                   : 46
NOT                  : 53
OR                   : 52
PRINT                : 28
PROGRAM              : 10
READ                 : 33 34
REAL                 : 8 14
REAL_NUM             : 56
RETURN               : 40
RPAREN               : 7 8 9 19 27 34 37 38 54 60
STRING               : 31
SUB                  : 42
SUBROUTINE           : 9
THEN                 : 37 38
TRUE                 : 58
error                : 

Nonterminals, with rules where they appear

bloco_principal      : 1 2
cabecalho            : 3 4
declaracao           : 11 12
declaracoes          : 3 7 8 9 11
elemento_print       : 29 30
expr                 : 26 27 27 32 34 35 35 37 38 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 54 61 62
id_ou_array          : 16 17
instrucao            : 24 25
instrucao_com_label  : 22 23
instrucoes           : 3 4 7 8 9 22 37 38 38
lista_expr           : 60 61
lista_ids            : 13 14 15 16
lista_ids_simples    : 7 8 9 20
lista_print          : 28 29
lista_subprogramas   : 1 5
programa             : 0
subprograma          : 5 6

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . bloco_principal lista_subprogramas
    (2) programa -> . bloco_principal
    (3) bloco_principal -> . cabecalho declaracoes instrucoes END
    (4) bloco_principal -> . cabecalho instrucoes END
    (10) cabecalho -> . PROGRAM IDEN

    PROGRAM         shift and go to state 4

    programa                       shift and go to state 1
    bloco_principal                shift and go to state 2
    cabecalho                      shift and go to state 3

state 1

    (0) S' -> programa .



state 2

    (1) programa -> bloco_principal . lista_subprogramas
    (2) programa -> bloco_principal .
    (5) lista_subprogramas -> . lista_subprogramas subprograma
    (6) lista_subprogramas -> . subprograma
    (7) subprograma -> . INTEGER FUNCTION IDEN LPAREN lista_ids_simples RPAREN declaracoes instrucoes END
    (8) subprograma -> . REAL FUNCTION IDEN LPAREN lista_ids_simples RPAREN declaracoes instrucoes END
    (9) subprograma -> . SUBROUTINE IDEN LPAREN lista_ids_simples RPAREN declaracoes instrucoes END

    $end            reduce using rule 2 (programa -> bloco_principal .)
    INTEGER         shift and go to state 7
    REAL            shift and go to state 8
    SUBROUTINE      shift and go to state 9

    lista_subprogramas             shift and go to state 5
    subprograma                    shift and go to state 6

state 3

    (3) bloco_principal -> cabecalho . declaracoes instrucoes END
    (4) bloco_principal -> cabecalho . instrucoes END
    (11) declaracoes -> . declaracoes declaracao
    (12) declaracoes -> . declaracao
    (22) instrucoes -> . instrucoes instrucao_com_label
    (23) instrucoes -> . instrucao_com_label
    (13) declaracao -> . INTEGER lista_ids
    (14) declaracao -> . REAL lista_ids
    (15) declaracao -> . LOGICAL lista_ids
    (24) instrucao_com_label -> . INT instrucao
    (25) instrucao_com_label -> . instrucao
    (26) instrucao -> . IDEN ASSIGN expr
    (27) instrucao -> . IDEN LPAREN expr RPAREN ASSIGN expr
    (28) instrucao -> . PRINT MUL COMMA lista_print
    (33) instrucao -> . READ MUL COMMA IDEN
    (34) instrucao -> . READ MUL COMMA IDEN LPAREN expr RPAREN
    (35) instrucao -> . DO INT IDEN ASSIGN expr COMMA expr
    (36) instrucao -> . CONTINUE
    (37) instrucao -> . IF LPAREN expr RPAREN THEN instrucoes ENDIF
    (38) instrucao -> . IF LPAREN expr RPAREN THEN instrucoes ELSE instrucoes ENDIF
    (39) instrucao -> . GOTO INT
    (40) instrucao -> . RETURN

    INTEGER         shift and go to state 14
    REAL            shift and go to state 15
    LOGICAL         shift and go to state 16
    INT             shift and go to state 17
    IDEN            shift and go to state 19
    PRINT           shift and go to state 20
    READ            shift and go to state 21
    DO              shift and go to state 22
    CONTINUE        shift and go to state 23
    IF              shift and go to state 24
    GOTO            shift and go to state 25
    RETURN          shift and go to state 26

    declaracoes                    shift and go to state 10
    instrucoes                     shift and go to state 11
    declaracao                     shift and go to state 12
    instrucao_com_label            shift and go to state 13
    instrucao                      shift and go to state 18

state 4

    (10) cabecalho -> PROGRAM . IDEN

    IDEN            shift and go to state 27


state 5

    (1) programa -> bloco_principal lista_subprogramas .
    (5) lista_subprogramas -> lista_subprogramas . subprograma
    (7) subprograma -> . INTEGER FUNCTION IDEN LPAREN lista_ids_simples RPAREN declaracoes instrucoes END
    (8) subprograma -> . REAL FUNCTION IDEN LPAREN lista_ids_simples RPAREN declaracoes instrucoes END
    (9) subprograma -> . SUBROUTINE IDEN LPAREN lista_ids_simples RPAREN declaracoes instrucoes END

    $end            reduce using rule 1 (programa -> bloco_principal lista_subprogramas .)
    INTEGER         shift and go to state 7
    REAL            shift and go to state 8
    SUBROUTINE      shift and go to state 9

    subprograma                    shift and go to state 28

state 6

    (6) lista_subprogramas -> subprograma .

    INTEGER         reduce using rule 6 (lista_subprogramas -> subprograma .)
    REAL            reduce using rule 6 (lista_subprogramas -> subprograma .)
    SUBROUTINE      reduce using rule 6 (lista_subprogramas -> subprograma .)
    $end            reduce using rule 6 (lista_subprogramas -> subprograma .)


state 7

    (7) subprograma -> INTEGER . FUNCTION IDEN LPAREN lista_ids_simples RPAREN declaracoes instrucoes END

    FUNCTION        shift and go to state 29


state 8

    (8) subprograma -> REAL . FUNCTION IDEN LPAREN lista_ids_simples RPAREN declaracoes instrucoes END

    FUNCTION        shift and go to state 30


state 9

    (9) subprograma -> SUBROUTINE . IDEN LPAREN lista_ids_simples RPAREN declaracoes instrucoes END

    IDEN            shift and go to state 31


state 10

    (3) bloco_principal -> cabecalho declaracoes . instrucoes END
    (11) declaracoes -> declaracoes . declaracao
    (22) instrucoes -> . instrucoes instrucao_com_label
    (23) instrucoes -> . instrucao_com_label
    (13) declaracao -> . INTEGER lista_ids
    (14) declaracao -> . REAL lista_ids
    (15) declaracao -> . LOGICAL lista_ids
    (24) instrucao_com_label -> . INT instrucao
    (25) instrucao_com_label -> . instrucao
    (26) instrucao -> . IDEN ASSIGN expr
    (27) instrucao -> . IDEN LPAREN expr RPAREN ASSIGN expr
    (28) instrucao -> . PRINT MUL COMMA lista_print
    (33) instrucao -> . READ MUL COMMA IDEN
    (34) instrucao -> . READ MUL COMMA IDEN LPAREN expr RPAREN
    (35) instrucao -> . DO INT IDEN ASSIGN expr COMMA expr
    (36) instrucao -> . CONTINUE
    (37) instrucao -> . IF LPAREN expr RPAREN THEN instrucoes ENDIF
    (38) instrucao -> . IF LPAREN expr RPAREN THEN instrucoes ELSE instrucoes ENDIF
    (39) instrucao -> . GOTO INT
    (40) instrucao -> . RETURN

    INTEGER         shift and go to state 14
    REAL            shift and go to state 15
    LOGICAL         shift and go to state 16
    INT             shift and go to state 17
    IDEN            shift and go to state 19
    PRINT           shift and go to state 20
    READ            shift and go to state 21
    DO              shift and go to state 22
    CONTINUE        shift and go to state 23
    IF              shift and go to state 24
    GOTO            shift and go to state 25
    RETURN          shift and go to state 26

    instrucoes                     shift and go to state 32
    declaracao                     shift and go to state 33
    instrucao_com_label            shift and go to state 13
    instrucao                      shift and go to state 18

state 11

    (4) bloco_principal -> cabecalho instrucoes . END
    (22) instrucoes -> instrucoes . instrucao_com_label
    (24) instrucao_com_label -> . INT instrucao
    (25) instrucao_com_label -> . instrucao
    (26) instrucao -> . IDEN ASSIGN expr
    (27) instrucao -> . IDEN LPAREN expr RPAREN ASSIGN expr
    (28) instrucao -> . PRINT MUL COMMA lista_print
    (33) instrucao -> . READ MUL COMMA IDEN
    (34) instrucao -> . READ MUL COMMA IDEN LPAREN expr RPAREN
    (35) instrucao -> . DO INT IDEN ASSIGN expr COMMA expr
    (36) instrucao -> . CONTINUE
    (37) instrucao -> . IF LPAREN expr RPAREN THEN instrucoes ENDIF
    (38) instrucao -> . IF LPAREN expr RPAREN THEN instrucoes ELSE instrucoes ENDIF
    (39) instrucao -> . GOTO INT
    (40) instrucao -> . RETURN

    END             shift and go to state 34
    INT             shift and go to state 17
    IDEN            shift and go to state 19
    PRINT           shift and go to state 20
    READ            shift and go to state 21
    DO              shift and go to state 22
    CONTINUE        shift and go to state 23
    IF              shift and go to state 24
    GOTO            shift and go to state 25
    RETURN          shift and go to state 26

    instrucao_com_label            shift and go to state 35
    instrucao                      shift and go to state 18

state 12

    (12) declaracoes -> declaracao .

    INTEGER         reduce using rule 12 (declaracoes -> declaracao .)
    REAL            reduce using rule 12 (declaracoes -> declaracao .)
    LOGICAL         reduce using rule 12 (declaracoes -> declaracao .)
    INT             reduce using rule 12 (declaracoes -> declaracao .)
    IDEN            reduce using rule 12 (declaracoes -> declaracao .)
    PRINT           reduce using rule 12 (declaracoes -> declaracao .)
    READ            reduce using rule 12 (declaracoes -> declaracao .)
    DO              reduce using rule 12 (declaracoes -> declaracao .)
    CONTINUE        reduce using rule 12 (declaracoes -> declaracao .)
    IF              reduce using rule 12 (declaracoes -> declaracao .)
    GOTO            reduce using rule 12 (declaracoes -> declaracao .)
    RETURN          reduce using rule 12 (declaracoes -> declaracao .)


state 13

    (23) instrucoes -> instrucao_com_label .

    END             reduce using rule 23 (instrucoes -> instrucao_com_label .)
    INT             reduce using rule 23 (instrucoes -> instrucao_com_label .)
    IDEN            reduce using rule 23 (instrucoes -> instrucao_com_label .)
    PRINT           reduce using rule 23 (instrucoes -> instrucao_com_label .)
    READ            reduce using rule 23 (instrucoes -> instrucao_com_label .)
    DO              reduce using rule 23 (instrucoes -> instrucao_com_label .)
    CONTINUE        reduce using rule 23 (instrucoes -> instrucao_com_label .)
    IF              reduce using rule 23 (instrucoes -> instrucao_com_label .)
    GOTO            reduce using rule 23 (instrucoes -> instrucao_com_label .)
    RETURN          reduce using rule 23 (instrucoes -> instrucao_com_label .)
    ENDIF           reduce using rule 23 (instrucoes -> instrucao_com_label .)
    ELSE            reduce using rule 23 (instrucoes -> instrucao_com_label .)


state 14

    (13) declaracao -> INTEGER . lista_ids
    (16) lista_ids -> . lista_ids COMMA id_ou_array
    (17) lista_ids -> . id_ou_array
    (18) id_ou_array -> . IDEN
    (19) id_ou_array -> . IDEN LPAREN INT RPAREN

    IDEN            shift and go to state 38

    lista_ids                      shift and go to state 36
    id_ou_array                    shift and go to state 37

state 15

    (14) declaracao -> REAL . lista_ids
    (16) lista_ids -> . lista_ids COMMA id_ou_array
    (17) lista_ids -> . id_ou_array
    (18) id_ou_array -> . IDEN
    (19) id_ou_array -> . IDEN LPAREN INT RPAREN

    IDEN            shift and go to state 38

    lista_ids                      shift and go to state 39
    id_ou_array                    shift and go to state 37

state 16

    (15) declaracao -> LOGICAL . lista_ids
    (16) lista_ids -> . lista_ids COMMA id_ou_array
    (17) lista_ids -> . id_ou_array
    (18) id_ou_array -> . IDEN
    (19) id_ou_array -> . IDEN LPAREN INT RPAREN

    IDEN            shift and go to state 38

    lista_ids                      shift and go to state 40
    id_ou_array                    shift and go to state 37

state 17

    (24) instrucao_com_label -> INT . instrucao
    (26) instrucao -> . IDEN ASSIGN expr
    (27) instrucao -> . IDEN LPAREN expr RPAREN ASSIGN expr
    (28) instrucao -> . PRINT MUL COMMA lista_print
    (33) instrucao -> . READ MUL COMMA IDEN
    (34) instrucao -> . READ MUL COMMA IDEN LPAREN expr RPAREN
    (35) instrucao -> . DO INT IDEN ASSIGN expr COMMA expr
    (36) instrucao -> . CONTINUE
    (37) instrucao -> . IF LPAREN expr RPAREN THEN instrucoes ENDIF
    (38) instrucao -> . IF LPAREN expr RPAREN THEN instrucoes ELSE instrucoes ENDIF
    (39) instrucao -> . GOTO INT
    (40) instrucao -> . RETURN

    IDEN            shift and go to state 19
    PRINT           shift and go to state 20
    READ            shift and go to state 21
    DO              shift and go to state 22
    CONTINUE        shift and go to state 23
    IF              shift and go to state 24
    GOTO            shift and go to state 25
    RETURN          shift and go to state 26

    instrucao                      shift and go to state 41

state 18

    (25) instrucao_com_label -> instrucao .

    END             reduce using rule 25 (instrucao_com_label -> instrucao .)
    INT             reduce using rule 25 (instrucao_com_label -> instrucao .)
    IDEN            reduce using rule 25 (instrucao_com_label -> instrucao .)
    PRINT           reduce using rule 25 (instrucao_com_label -> instrucao .)
    READ            reduce using rule 25 (instrucao_com_label -> instrucao .)
    DO              reduce using rule 25 (instrucao_com_label -> instrucao .)
    CONTINUE        reduce using rule 25 (instrucao_com_label -> instrucao .)
    IF              reduce using rule 25 (instrucao_com_label -> instrucao .)
    GOTO            reduce using rule 25 (instrucao_com_label -> instrucao .)
    RETURN          reduce using rule 25 (instrucao_com_label -> instrucao .)
    ENDIF           reduce using rule 25 (instrucao_com_label -> instrucao .)
    ELSE            reduce using rule 25 (instrucao_com_label -> instrucao .)


state 19

    (26) instrucao -> IDEN . ASSIGN expr
    (27) instrucao -> IDEN . LPAREN expr RPAREN ASSIGN expr

    ASSIGN          shift and go to state 42
    LPAREN          shift and go to state 43


state 20

    (28) instrucao -> PRINT . MUL COMMA lista_print

    MUL             shift and go to state 44


state 21

    (33) instrucao -> READ . MUL COMMA IDEN
    (34) instrucao -> READ . MUL COMMA IDEN LPAREN expr RPAREN

    MUL             shift and go to state 45


state 22

    (35) instrucao -> DO . INT IDEN ASSIGN expr COMMA expr

    INT             shift and go to state 46


state 23

    (36) instrucao -> CONTINUE .

    END             reduce using rule 36 (instrucao -> CONTINUE .)
    INT             reduce using rule 36 (instrucao -> CONTINUE .)
    IDEN            reduce using rule 36 (instrucao -> CONTINUE .)
    PRINT           reduce using rule 36 (instrucao -> CONTINUE .)
    READ            reduce using rule 36 (instrucao -> CONTINUE .)
    DO              reduce using rule 36 (instrucao -> CONTINUE .)
    CONTINUE        reduce using rule 36 (instrucao -> CONTINUE .)
    IF              reduce using rule 36 (instrucao -> CONTINUE .)
    GOTO            reduce using rule 36 (instrucao -> CONTINUE .)
    RETURN          reduce using rule 36 (instrucao -> CONTINUE .)
    ENDIF           reduce using rule 36 (instrucao -> CONTINUE .)
    ELSE            reduce using rule 36 (instrucao -> CONTINUE .)


state 24

    (37) instrucao -> IF . LPAREN expr RPAREN THEN instrucoes ENDIF
    (38) instrucao -> IF . LPAREN expr RPAREN THEN instrucoes ELSE instrucoes ENDIF

    LPAREN          shift and go to state 47


state 25

    (39) instrucao -> GOTO . INT

    INT             shift and go to state 48


state 26

    (40) instrucao -> RETURN .

    END             reduce using rule 40 (instrucao -> RETURN .)
    INT             reduce using rule 40 (instrucao -> RETURN .)
    IDEN            reduce using rule 40 (instrucao -> RETURN .)
    PRINT           reduce using rule 40 (instrucao -> RETURN .)
    READ            reduce using rule 40 (instrucao -> RETURN .)
    DO              reduce using rule 40 (instrucao -> RETURN .)
    CONTINUE        reduce using rule 40 (instrucao -> RETURN .)
    IF              reduce using rule 40 (instrucao -> RETURN .)
    GOTO            reduce using rule 40 (instrucao -> RETURN .)
    RETURN          reduce using rule 40 (instrucao -> RETURN .)
    ENDIF           reduce using rule 40 (instrucao -> RETURN .)
    ELSE            reduce using rule 40 (instrucao -> RETURN .)


state 27

    (10) cabecalho -> PROGRAM IDEN .

    INTEGER         reduce using rule 10 (cabecalho -> PROGRAM IDEN .)
    REAL            reduce using rule 10 (cabecalho -> PROGRAM IDEN .)
    LOGICAL         reduce using rule 10 (cabecalho -> PROGRAM IDEN .)
    INT             reduce using rule 10 (cabecalho -> PROGRAM IDEN .)
    IDEN            reduce using rule 10 (cabecalho -> PROGRAM IDEN .)
    PRINT           reduce using rule 10 (cabecalho -> PROGRAM IDEN .)
    READ            reduce using rule 10 (cabecalho -> PROGRAM IDEN .)
    DO              reduce using rule 10 (cabecalho -> PROGRAM IDEN .)
    CONTINUE        reduce using rule 10 (cabecalho -> PROGRAM IDEN .)
    IF              reduce using rule 10 (cabecalho -> PROGRAM IDEN .)
    GOTO            reduce using rule 10 (cabecalho -> PROGRAM IDEN .)
    RETURN          reduce using rule 10 (cabecalho -> PROGRAM IDEN .)


state 28

    (5) lista_subprogramas -> lista_subprogramas subprograma .

    INTEGER         reduce using rule 5 (lista_subprogramas -> lista_subprogramas subprograma .)
    REAL            reduce using rule 5 (lista_subprogramas -> lista_subprogramas subprograma .)
    SUBROUTINE      reduce using rule 5 (lista_subprogramas -> lista_subprogramas subprograma .)
    $end            reduce using rule 5 (lista_subprogramas -> lista_subprogramas subprograma .)


state 29

    (7) subprograma -> INTEGER FUNCTION . IDEN LPAREN lista_ids_simples RPAREN declaracoes instrucoes END

    IDEN            shift and go to state 49


state 30

    (8) subprograma -> REAL FUNCTION . IDEN LPAREN lista_ids_simples RPAREN declaracoes instrucoes END

    IDEN            shift and go to state 50


state 31

    (9) subprograma -> SUBROUTINE IDEN . LPAREN lista_ids_simples RPAREN declaracoes instrucoes END

    LPAREN          shift and go to state 51


state 32

    (3) bloco_principal -> cabecalho declaracoes instrucoes . END
    (22) instrucoes -> instrucoes . instrucao_com_label
    (24) instrucao_com_label -> . INT instrucao
    (25) instrucao_com_label -> . instrucao
    (26) instrucao -> . IDEN ASSIGN expr
    (27) instrucao -> . IDEN LPAREN expr RPAREN ASSIGN expr
    (28) instrucao -> . PRINT MUL COMMA lista_print
    (33) instrucao -> . READ MUL COMMA IDEN
    (34) instrucao -> . READ MUL COMMA IDEN LPAREN expr RPAREN
    (35) instrucao -> . DO INT IDEN ASSIGN expr COMMA expr
    (36) instrucao -> . CONTINUE
    (37) instrucao -> . IF LPAREN expr RPAREN THEN instrucoes ENDIF
    (38) instrucao -> . IF LPAREN expr RPAREN THEN instrucoes ELSE instrucoes ENDIF
    (39) instrucao -> . GOTO INT
    (40) instrucao -> . RETURN

    END             shift and go to state 52
    INT             shift and go to state 17
    IDEN            shift and go to state 19
    PRINT           shift and go to state 20
    READ            shift and go to state 21
    DO              shift and go to state 22
    CONTINUE        shift and go to state 23
    IF              shift and go to state 24
    GOTO            shift and go to state 25
    RETURN          shift and go to state 26

    instrucao_com_label            shift and go to state 35
    instrucao                      shift and go to state 18

state 33

    (11) declaracoes -> declaracoes declaracao .

    INTEGER         reduce using rule 11 (declaracoes -> declaracoes declaracao .)
    REAL            reduce using rule 11 (declaracoes -> declaracoes declaracao .)
    LOGICAL         reduce using rule 11 (declaracoes -> declaracoes declaracao .)
    INT             reduce using rule 11 (declaracoes -> declaracoes declaracao .)
    IDEN            reduce using rule 11 (declaracoes -> declaracoes declaracao .)
    PRINT           reduce using rule 11 (declaracoes -> declaracoes declaracao .)
    READ            reduce using rule 11 (declaracoes -> declaracoes declaracao .)
    DO              reduce using rule 11 (declaracoes -> declaracoes declaracao .)
    CONTINUE        reduce using rule 11 (declaracoes -> declaracoes declaracao .)
    IF              reduce using rule 11 (declaracoes -> declaracoes declaracao .)
    GOTO            reduce using rule 11 (declaracoes -> declaracoes declaracao .)
    RETURN          reduce using rule 11 (declaracoes -> declaracoes declaracao .)


state 34

    (4) bloco_principal -> cabecalho instrucoes END .

    INTEGER         reduce using rule 4 (bloco_principal -> cabecalho instrucoes END .)
    REAL            reduce using rule 4 (bloco_principal -> cabecalho instrucoes END .)
    SUBROUTINE      reduce using rule 4 (bloco_principal -> cabecalho instrucoes END .)
    $end            reduce using rule 4 (bloco_principal -> cabecalho instrucoes END .)


state 35

    (22) instrucoes -> instrucoes instrucao_com_label .
